--- a/Tests/LibWeb/Text/input/navigation/multiple-navigable-cross-document-navigation.html
+++ b/Tests/LibWeb/Text/input/navigation/multiple-navigable-cross-document-navigation.html
@@ -2,10 +2,12 @@
 <script src="../include.js"></script>
 <iframe id="a"></iframe>
 <iframe id="b"></iframe>
+<iframe id="c"></iframe>
+<iframe id="d"></iframe>
 <script>
     asyncTest(done => {
-        let doneA = false, doneB = false;
-        function check() {if (doneA && doneB) done();}
+        let doneA = false, doneB = false, doneC = false, doneD = false;
+        function check() {if (doneA && doneB && doneC && doneD) done();}
         function makeContent(id, n) {
             let html = `<h3>${id} ${n}</h3>`;
             if (n % 3 === 0) html += `<iframe id="nest1+${id}" srcdoc="${id} ${n}"></iframe>`;
@@ -27,5 +29,7 @@
         }
         run(document.getElementById('a'), 'a', 0, 101, () => {doneA = true; check();});
         run(document.getElementById('b'), 'b', 0, 101, () => {doneB = true; check();});
+        run(document.getElementById('c'), 'c', 0, 101, () => {doneC = true; check();});
+        run(document.getElementById('d'), 'd', 0, 101, () => {doneD = true; check();});
     });
 </script>
