LibWeb: Repeat shader for repeating linear gradient
We implemented repeating linear gradients by expanding a vector of color
stops until the entire range was covered. This is both a bit wasteful
and caused Skia to draw corrupted gradients to screen whenever the total
amount of color stops and positions exceeded 127.

Instead of doing that, use the original color stops for the shader and
repeat it instead of clamping it. We need to do a bit of math to project
positions correctly, but after that the shader repeats itself nicely.

While we're here, calculate the gradient's length and the center point
as floats instead of ints, yielding a slight but noticeable improvement
in gradient rendering (see the diff on the zig zag pattern in
css-gradients.html for an example of this).

--- a/Tests/LibWeb/Screenshot/input/css-gradients.html
+++ b/Tests/LibWeb/Screenshot/input/css-gradients.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <link rel="match" href="../expected/css-gradients-ref.html" />
-<meta name="fuzzy" content="maxDifference=0-63;totalPixels=0-215">
+<meta name="fuzzy" content="maxDifference=0-63;totalPixels=0-167">
 <style>
   body {
     background-color: white;
@@ -145,6 +145,10 @@
     background-image: -webkit-repeating-linear-gradient(left, red 10%, blue 30%);
   }
 
+  .grad-repeat-4 {
+    background-image: repeating-linear-gradient(to bottom, blue 0 2px, red 2px 4px);
+  }
+
   .grad-double-position {
     background-image: linear-gradient(to right, red 20%, orange 20% 40%, yellow 40% 60%, green 60% 80%, blue 80%)
   }
@@ -246,6 +250,7 @@
   <div class="box grad-conic-6"></div>
   <div class="box grad-conic-repeat-1"></div>
   <div class="box grad-conic-repeat-2"></div>
+  <div class="box grad-repeat-4"></div>
 </section>
 <section class="rects">
   <div class="rect grad-7"></div>
