--- a/Tests/LibWeb/Screenshot/input/svg-gradient-objectBoundingBox.html
+++ b/Tests/LibWeb/Screenshot/input/svg-gradient-objectBoundingBox.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="match" href="../expected/svg-gradient-userSpaceOnUse-ref.html" />
+<link rel="match" href="../expected/svg-gradient-objectBoundingBox-ref.html" />
 <meta name="fuzzy" content="maxDifference=0-1;totalPixels=0-69">
 <style>
 svg {
@@ -9,7 +9,7 @@ svg {
 <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect x="10" y="10" width="44" height="44" fill="url(#a)" />
     <defs>
-        <linearGradient id="a" x1="10" y1="10" x2="10" y2="64" gradientUnits="userSpaceOnUse">
+        <linearGradient id="a" x1=".1" y1=".1" x2=".1" y2="1" gradientUnits="objectBoundingBox">
             <stop offset="0" stop-color="#f00" />
             <stop offset="0.0001" stop-color="#0f0" stop-opacity="0.3" />
             <stop offset="1" stop-color="#0f0" stop-opacity="0.7" />
@@ -19,7 +19,7 @@ svg {
 <svg width="32" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect x="0" y="0" width="64" height="64" fill="url(#b)" />
     <defs>
-        <linearGradient id="b" x1="0" y1="0" x2="0" y2="64" gradientUnits="userSpaceOnUse">
+        <linearGradient id="b" x1="0" y1="0" x2="0" y2="1" gradientUnits="objectBoundingBox">
             <stop offset="0" stop-color="#f00" />
             <stop offset="0.1" stop-color="#0f0" />
             <stop offset="1" stop-color="#00f" />
@@ -29,7 +29,7 @@ svg {
 <svg width="48" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect x="0" y="0" width="64" height="64" fill="url(#c)" />
     <defs>
-        <linearGradient id="c" x1="0" y1="0" x2="0" y2="64" gradientUnits="userSpaceOnUse">
+        <linearGradient id="c" x1="0" y1="0" x2="0" y2="1" gradientUnits="objectBoundingBox">
             <stop offset="0" stop-color="#f00" />
             <stop offset="0.1" stop-color="#0f0" />
             <stop offset="1" stop-color="#00f" />
@@ -39,7 +39,7 @@ svg {
 <svg width="64" height="64" viewBox="0 32 64 32" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect x="0" y="0" width="64" height="64" fill="url(#d)" />
     <defs>
-        <linearGradient id="d" x1="0" y1="0" x2="0" y2="64" gradientUnits="userSpaceOnUse">
+        <linearGradient id="d" x1="0" y1="0" x2="0" y2="1" gradientUnits="objectBoundingBox">
             <stop offset="0" stop-color="#f00" />
             <stop offset="0.1" stop-color="#0f0" />
             <stop offset="1" stop-color="#00f" />
@@ -49,7 +49,7 @@ svg {
 <svg width="64" height="64" viewBox="0 0 64 8" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect x="0" y="0" width="64" height="64" fill="url(#e)" />
     <defs>
-        <linearGradient id="e" x1="0" y1="0" x2="0" y2="64" gradientUnits="userSpaceOnUse">
+        <linearGradient id="e" x1="0" y1="0" x2="0" y2="1" gradientUnits="objectBoundingBox">
             <stop offset="0" stop-color="#f00" />
             <stop offset="0.1" stop-color="#0f0" />
             <stop offset="1" stop-color="#00f" />
@@ -59,7 +59,7 @@ svg {
 <svg width="64" height="64" viewBox="32 0 32 64" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect x="0" y="0" width="64" height="64" fill="url(#f)" />
     <defs>
-        <linearGradient id="f" x1="10" y1="0" x2="54" y2="0" gradientUnits="userSpaceOnUse">
+        <linearGradient id="f" x1=".1" y1="0" x2=".8" y2="0" gradientUnits="objectBoundingBox">
             <stop offset="0" stop-color="#f00" />
             <stop offset="0.1" stop-color="#0f0" />
             <stop offset="1" stop-color="#00f" />
@@ -69,7 +69,7 @@ svg {
 <svg width="64" height="64" viewBox="-20 -20 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect x="-20" y="-20" width="50" height="50" fill="url(#g)" />
     <defs>
-        <linearGradient id="g" x1="10" y1="10" x2="10" y2="64" gradientUnits="userSpaceOnUse">
+        <linearGradient id="g" x1="10%" y1="10%" x2="10%" y2="100%" gradientUnits="objectBoundingBox">
             <stop offset="0" stop-color="#f00" />
             <stop offset="0.0001" stop-color="#0f0" stop-opacity="0.3" />
             <stop offset="1" stop-color="#0f0" stop-opacity="0.7" />
@@ -79,9 +79,9 @@ svg {
 <svg width="64" height="64" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect x="16" y="16" width="32" height="32" fill="url(#h)" transform="rotate(45 32 32)" />
     <defs>
-        <linearGradient id="h" gradientUnits="userSpaceOnUse">
-            <stop offset=".25" stop-color="#f00" />
-            <stop offset=".75" stop-color="#0f0" />
+        <linearGradient id="h" gradientUnits="objectBoundingBox">
+            <stop offset="0" stop-color="#f00" />
+            <stop offset="1" stop-color="#0f0" />
         </linearGradient>
     </defs>
 </svg>
