--- a/Tests/LibWeb/Text/input/MathML/presentational_hints.html
+++ b/Tests/LibWeb/Text/input/MathML/presentational_hints.html
@@ -17,6 +17,8 @@
     </math>
     <math data-prop="font-size">
         <mi mathsize="10px"></mi>
+        <mi mathsize="150%"></mi>
+        <mi mathsize="2em"></mi>
     </math>
     <math data-prop="math-style">
         <mi displaystyle=""></mi>
@@ -38,11 +40,15 @@
     <math data-prop="width">
         <mspace width="10px"></mspace>
         <mspace width="10%"></mspace>
+        <mspace width="2em"></mspace>
     </math>
     <math data-prop="height">
         <mspace height="20px"></mspace>
-        <mspace depth="30px"></mspace>
         <mspace height="10%"></mspace>
+        <mspace height="2em"></mspace>
+        <mspace depth="30px"></mspace>
+        <mspace depth="20%"></mspace>
+        <mspace depth="3em"></mspace>
     </math>
 </body>
 <script>
