LibWeb/MathML: Combine mspace height and depth when both are valid

--- a/Tests/LibWeb/Text/input/MathML/presentational_hints.html
+++ b/Tests/LibWeb/Text/input/MathML/presentational_hints.html
@@ -49,6 +49,10 @@
         <mspace depth="30px"></mspace>
         <mspace depth="20%"></mspace>
         <mspace depth="3em"></mspace>
+        <mspace depth="1%" height="20px"></mspace>
+        <mspace depth="30px" height="1%"></mspace>
+        <mspace depth="30px" height="20px"></mspace>
+        <mspace depth="1.5em" height="2em"></mspace>
     </math>
 </body>
 <script>
