LibWeb/MathML: Parse mathcolor and mathbackground as `<color>`
The difference is that parsing as the `color` property's value also
allows the CSS-wide keywords, which we don't want here.

The added test cases make sure that those keywords are *not* valid:
- `color` should inherit its parent value of `orange`
- `background-color` doesn't inherit, so should be its initial value of
  `transparent`

--- a/Tests/LibWeb/Text/input/MathML/presentational_hints.html
+++ b/Tests/LibWeb/Text/input/MathML/presentational_hints.html
@@ -7,13 +7,15 @@
         <mi dir="LTR"></mi>
         <mi dir="rtl"></mi>
     </math>
-    <math data-prop="color">
+    <math data-prop="color" style="color: orange">
         <mi mathcolor="red"></mi>
         <mi mathcolor="#f00"></mi>
+        <mi mathcolor="initial"></mi>
     </math>
-    <math data-prop="background-color">
+    <math data-prop="background-color" style="background-color: orange">
         <mi mathbackground="blue"></mi>
         <mi mathbackground="#0000ff"></mi>
+        <mi mathbackground="inherit"></mi>
     </math>
     <math data-prop="font-size">
         <mi mathsize="10px"></mi>
