LibWeb/Test: Allow WPT to import .src files in script tags
This change allows WPT to import files from script withing script tags
that that use a pattern like `.src=*.html` (eg. iframe.src = "file.
html") , which can inadvertently lead to importing files that should
not be run. To prevent this, add these files to TestConfig.ini as
skipped tests. This process is currently manual.

--- a/Tests/LibWeb/Text/input/wpt-import/dom/ranges/Range-insertNode.html
+++ b/Tests/LibWeb/Text/input/wpt-import/dom/ranges/Range-insertNode.html
@@ -279,9 +279,8 @@ actualIframe.onload = function() {
             }
         }
     }
-    expectedIframe.src = "resources/Range-test-iframe.html";
+    expectedIframe.src = "Range-test-iframe.html";
     referenceDoc.appendChild(actualIframe.contentDocument.documentElement.cloneNode(true));
 }
-// FIXME: This location of this file has been modified so that this file is not treated as a test file.
-actualIframe.src = "resources/Range-test-iframe.html";
+actualIframe.src = "Range-test-iframe.html";
 </script>
