--- a/Tests/LibWeb/Text/input/wpt-import/dom/ranges/Range-test-iframe.html
+++ b/Tests/LibWeb/Text/input/wpt-import/dom/ranges/Range-test-iframe.html
@@ -3,7 +3,7 @@
 <link rel="author" title="Aryeh Gregor" href=ayg@aryeh.name>
 <meta name=timeout content=long>
 <body onload=run()>
-<script src=../../common.js></script>
+<script src=../common.js></script>
 <script>
 "use strict";
 
