--- a/Tests/LibWeb/Text/input/wpt-import/WebCryptoAPI/generateKey/successes_Ed448.tentative.https.any.html
+++ b/Tests/LibWeb/Text/input/wpt-import/WebCryptoAPI/generateKey/successes_Ed448.tentative.https.any.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>WebCryptoAPI: importKey() for Failures</title>
+<title>WebCryptoAPI: generateKey() Successful Calls</title>
 <meta name="timeout" content="long">
 <script>
 self.GLOBAL = {
@@ -12,7 +12,7 @@ self.GLOBAL = {
 <script src="../../resources/testharness.js"></script>
 <script src="../../resources/testharnessreport.js"></script>
 <script src="../util/helpers.js"></script>
-<script src="okp_importKey_failures_fixtures.js"></script>
-<script src="importKey_failures.js"></script>
+<script src="../../common/subset-tests.js"></script>
+<script src="successes.js"></script>
 <div id=log></div>
-<script src="../../WebCryptoAPI/import_export/okp_importKey_failures_X448.https.any.js"></script>
+<script src="../../WebCryptoAPI/generateKey/successes_Ed448.tentative.https.any.js"></script>
