--- a/Tests/LibWeb/Text/input/wpt-import/WebCryptoAPI/import_export/symmetric_importKey.https.any.html
+++ b/Tests/LibWeb/Text/input/wpt-import/WebCryptoAPI/import_export/symmetric_importKey.https.any.html
@@ -12,5 +12,6 @@ self.GLOBAL = {
 <script src="../../resources/testharness.js"></script>
 <script src="../../resources/testharnessreport.js"></script>
 <script src="../util/helpers.js"></script>
+<script src="symmetric_importKey.js"></script>
 <div id=log></div>
 <script src="../../WebCryptoAPI/import_export/symmetric_importKey.https.any.js"></script>
