LibWeb/CSS: Store linear-gradient() angle as a StyleValue
This means we now support calc() there too.

--- a/Tests/LibWeb/Screenshot/input/css-gradients.html
+++ b/Tests/LibWeb/Screenshot/input/css-gradients.html
@@ -87,6 +87,10 @@
   .grad-10 {
     background-image: linear-gradient(90deg, red, transparent, blue);
   }
+  
+  .grad-10-calc-angle {
+    background-image: linear-gradient(calc(30deg * 3), red, transparent, blue);
+  }
 
   .grad-11 {
     background-image: linear-gradient(to top right, indigo, white, deeppink);
@@ -251,6 +255,7 @@
   <div class="box grad-conic-repeat-1"></div>
   <div class="box grad-conic-repeat-2"></div>
   <div class="box grad-repeat-4"></div>
+  <div class="box grad-10-calc-angle"></div>
 </section>
 <section class="rects">
   <div class="rect grad-7"></div>
