LibWeb: Make `<radal-size>` parsing generic
Previously this was implemented inline within the parsing of
`{repeating}-radial-gradient()` functions but it will also be useful for
`circle()` and `ellipse()`.

We now support the CSS Images Module Level 4 additions to the
`<radial-size>` syntax, namely:
 - `<length-percentage>` rather than just `<length>` for circles.
 - Distinct `<radial-extent>` values for horizontal and vertical for
   ellipses.
 - Mixing of `<radial-extent>` and `<length-percentage>` values for
   ellipses.

The regressions are due to WPT not being updated to expect the first of
these additions.

--- a/Tests/LibWeb/Screenshot/input/css-gradients.html
+++ b/Tests/LibWeb/Screenshot/input/css-gradients.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <link rel="match" href="../expected/css-gradients-ref.html" />
-<meta name="fuzzy" content="maxDifference=0-162;totalPixels=0-428">
+<meta name="fuzzy" content="maxDifference=0-162;totalPixels=0-435">
 <style>
   body {
     background-color: white;
@@ -211,6 +211,18 @@
     background-image: radial-gradient(200px 100px ellipse at 25% 50%, yellow, #009966, purple);
   }
 
+  .grad-radial-5 {
+    background-image: radial-gradient(ellipse closest-side farthest-side at 25% 25%, yellow, #009966, purple);
+  }
+
+  .grad-radial-6 {
+    background-image: radial-gradient(50% at 25% 25%, yellow, #009966, purple);
+  }
+
+  .grad-radial-7 {
+    background-image: radial-gradient(closest-side 50% at 25% 25%, yellow, #009966, purple);
+  }
+
   .grad-radial-repeat-1 {
     background-image: repeating-radial-gradient(#e66465, #9198e5 20%);
   }
@@ -268,6 +280,9 @@
   <div class="rect grad-radial-2"></div>
   <div class="rect grad-radial-3"></div>
   <div class="rect grad-radial-4"></div>
+  <div class="rect grad-radial-5"></div>
+  <div class="rect grad-radial-6"></div>
+  <div class="rect grad-radial-7"></div>
   <div class="rect grad-radial-repeat-1"></div>
   <div class="rect grad-radial-repeat-2"></div>
   <div class="rect grad-radial-repeat-3"></div>
