LibWeb: Support all `<radial-extent>` values in `circle()`

--- a/Tests/LibWeb/Screenshot/input/clip-path-basic-shapes.html
+++ b/Tests/LibWeb/Screenshot/input/clip-path-basic-shapes.html
@@ -84,6 +84,12 @@
     <div class="inner" style="clip-path: circle(-10px)"></div>
 </div>
 <div class="outer">
+    <div class="inner" style="clip-path: circle(closest-corner at 10px 10px)"></div>
+</div>
+<div class="outer">
+    <div class="inner" style="clip-path: circle(farthest-corner)"></div>
+</div>
+<div class="outer">
     <div class="inner" style="clip-path: ellipse(20px 50px)"></div>
 </div>
 <div class="outer">
