LibWeb: Support all `<radial-extent>` values in `ellipse()`
To do this we use the generic `RadialSizeStyleValue` which allows us to
remove the remaining logic around `<shape-radius>`

--- a/Tests/LibWeb/Screenshot/input/clip-path-basic-shapes.html
+++ b/Tests/LibWeb/Screenshot/input/clip-path-basic-shapes.html
@@ -120,6 +120,12 @@
     <div class="inner" style="clip-path: ellipse(-10% -10px at right)"></div>
 </div>
 <div class="outer">
+    <div class="inner" style="clip-path: ellipse(closest-corner closest-corner at 25% 25%)"></div>
+</div>
+<div class="outer">
+    <div class="inner" style="clip-path: ellipse(closest-corner 20%)"></div>
+</div>
+<div class="outer">
     <div class="inner" style="clip-path: polygon(100% 0%, 50% 50%, 100% 100%)"></div>
 </div>
 <div class="outer">
