LibWeb: Always use timeline time for animation pending task ready time
It is not guaranteed that an animation is ready to run a pending task
when it is scheduled just because it has a timeline, and even if it is,
the current time when scheduling will not necessarily still be correct
when the task is run (e.g. if the timeline changes in the interim).

We had some tests which relied on the previous behavior which have been
updated to await the pending play task

Fixes a crash in the
/web-animations/interfaces/Animatable/animate-no-browsing-context.html
WPT test but it can't be imported since it relies on a python web server
to be running

--- a/Tests/LibWeb/Text/input/WebAnimations/animation-effect/get-computed-timing.html
+++ b/Tests/LibWeb/Text/input/WebAnimations/animation-effect/get-computed-timing.html
@@ -41,6 +41,7 @@
             iterations: 3,
             timeline,
         });
+        await animationFrame();
         timeline.setTime(1200);
         await animationFrame();
         timing = anim.effect.getComputedTiming();
