LibWeb: Update animations regardless of whether timeline time changed
There are times that we want to update an animation regardless of
whether it's timelines time has changed, for example if an animation
associated with a scroll timeline has a pending task we should run that
on the next update regardless of whether the user has scrolled

--- a/Tests/LibWeb/Text/input/WebAnimations/animation-properties/playbackRate.html
+++ b/Tests/LibWeb/Text/input/WebAnimations/animation-properties/playbackRate.html
@@ -2,10 +2,14 @@
 <div id="foo"></div>
 <script src="../../include.js"></script>
 <script>
-    test(() => {
+    promiseTest(async () => {
         const foo = document.getElementById("foo");
         const timeline = internals.createInternalAnimationTimeline();
         const animation = foo.animate({ opacity: [0, 1] }, { duration: 1000, timeline });
+
+        // Wait for the pending play task
+        await animationFrame();
+
         animation.playbackRate = 2;
 
         timeline.setTime(100);
