LibWeb: Add a yellow background and fix text-overflow reference

--- a/Tests/LibWeb/Ref/input/text-overflow.html
+++ b/Tests/LibWeb/Ref/input/text-overflow.html
@@ -5,6 +5,7 @@
     overflow: hidden;
     white-space: nowrap;
     width: 75px;
+    background: yellow;
   }
   .clip {
     text-overflow: clip;
