--- a/Tests/LibWeb/Ref/expected/text-overflow.html
+++ b/Tests/LibWeb/Ref/expected/text-overflow.html
@@ -4,7 +4,8 @@
     overflow: hidden;
     white-space: nowrap;
     width: 75px;
+    background: yellow;
   }
 </style>
 <div>This text gets clipped</div>
-<div>This tex…</div>
+<div>This te...</div>
