LibWeb: Parse `font-variant-alternates` functions

--- a/Tests/LibWeb/Text/input/css/disallowed-font-variants.html
+++ b/Tests/LibWeb/Text/input/css/disallowed-font-variants.html
@@ -11,6 +11,10 @@
     #c {
         font-variant: ordinal small-caps slashed-zero;
     }
+
+    #d {
+        font-variant: historical-forms small-caps stylistic(abc);
+    }
 </style>
 <script src="../include.js"></script>
 <pre id="out"></pre>
