LibWeb: Rework Internals' mouse control
Instead of defining somewhat high level mouse actions, allow granular
control of mouse clicks and mouse down/up/move events. We will want to
simulate things like holding down a mouse button after double clicking
and then dragging the mouse to another position in the future, and this
enables that.

--- a/Tests/LibWeb/Text/input/select-text.html
+++ b/Tests/LibWeb/Text/input/select-text.html
@@ -9,7 +9,7 @@
 <script>
     test(() => {
         // Select word "Lorem" by dispatching double click event
-        internals.doubleclick(20, 20);
+        internals.click(20, 20, 2);
 
         // Should be equal to "Lorem"
         println(window.getSelection());
