Base: Use title case in settings button
Matches our HMI guidelines.

--- a/Base/res/ladybird/about-pages/settings.html
+++ b/Base/res/ladybird/about-pages/settings.html
@@ -553,7 +553,7 @@
                 </div>
             </div>
             <div class="dialog-footer">
-                <button id="clear-browsing-data-remove-data" class="secondary-button">Remove data</button>
+                <button id="clear-browsing-data-remove-data" class="secondary-button">Remove Data</button>
             </div>
         </dialog>
 
